--- a/public/css/vi-logger.css
+++ b/public/css/vi-logger.css
@@ -32,3 +32,28 @@
     padding:2px;
     font-size:10px;
 }
+
+.vi2-video-timer{
+    font-size:10px;
+    width:50px !important;
+}
+
+@media (max-width: 1200px) { 
+    .control-bar{
+        padding:0;
+    }
+ }
+
+
+ @media (max-width: 1000px) { 
+     body, #logsettings ul li span{
+         font-size:.9em;
+     }
+    #video-controls{
+        height:100px;
+        display:inline-block;
+    }
+    #logsettings input[type=number]{
+        width: 60px;
+    }
+ }
