--- a/public/css/vi-logger.css
+++ b/public/css/vi-logger.css
@@ -10,7 +10,7 @@ h4{
 input[type="checkbox"]{
     margin:0 !important;
     display: inline-block;
-     margin-right: -20px;
+    margin-right: -20px;
     margin-left: 0;
 }
 
@@ -39,11 +39,12 @@ label{
 
 #logoutput{
     width:95%;
-    height: 150px;
+    height: 250px;
     overflow: auto;
     margin: auto 4px;
     padding:2px;
-    font-size:1em;
+    margin-bottom:25px;
+    font-size:.9em;
 }
 
 .vi2-video-timer{
@@ -65,6 +66,7 @@ label{
    width: 100%;
    text-align: center;
    margin-top:20px;
+   background-color: darkgrey;
 }
 
 h4{
